# reflex-ui

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  rxconfig.py
.github/workflows/: pre-commit.yml
assets/css/: globals.css
demo/: .gitignore  requirements.txt  rxconfig.py
demo/assets/css/: globals.css
demo/demo/: demo.py  simple_icon.py
reflex_ui/: __init__.py  __init__.pyi  reflex_ui.py
reflex_ui/blocks/: calcom.py  demo_form.py  intro_form.py  lemcal.py  lemcal.pyi  plain.py
reflex_ui/blocks/telemetry/: __init__.py  common_room.py  default.py  google.py  posthog.py  rb2b.py  unify.py
reflex_ui/components/: __init__.pyi  accordion.py  avatar.py  base_ui.py  base_ui.pyi  button.py  component.py
reflex_ui/components/base/: __init__.py  __init__.pyi  accordion.py  accordion.pyi  avatar.py  avatar.pyi  badge.py  badge.pyi  base_ui.py  button.py  button.pyi  card.py  card.pyi  checkbox.py  checkbox.pyi  collapsible.py  collapsible.pyi  combobox.py  combobox.pyi  context_menu.py  context_menu.pyi  core_component.py  dialog.py  dialog.pyi  drawer.py  drawer.pyi  gradient_profile.py  gradient_profile.pyi  input.py  input.pyi  link.py  link.pyi  menu.py  menu.pyi  navigation_menu.py  navigation_menu.pyi  popover.py  popover.pyi  preview_card.py  preview_card.pyi  (+21 more)
reflex_ui/utils/: __init__.py  iterable_list.py
scripts/: make_pyi.py
shared/: pyproject.toml  route.py
shared/backend/: get_blogs.py  signup.py
shared/components/: code_card.py  docs.py  hosting_banner.py  icons.py  patterns.py
shared/components/blocks/: code.py  flexdown.py  headings.py  typography.py
shared/gallery/: apps.py  common.py  gallery.py  sidebar.py
shared/meta/: meta.py
shared/pages/: page404.py
shared/reflex_ui_shared/: constants.py
shared/reflex_ui_shared/backend/: get_blogs.py  signup.py
shared/reflex_ui_shared/components/: code_card.py  docs.py  marquee.py  patterns.py
shared/reflex_ui_shared/components/blocks/: code.py  demo.py  flexdown.py  headings.py  typography.py
shared/reflex_ui_shared/gallery/: apps.py  common.py  gallery.py  sidebar.py
shared/reflex_ui_shared/lib/: route.py
shared/reflex_ui_shared/meta/: meta.py
shared/reflex_ui_shared/pages/: page404.py
shared/reflex_ui_shared/styles/: styles.py
shared/reflex_ui_shared/telemetry/: pixels.py
shared/reflex_ui_shared/templates/: gallery_app_page.py  marketing_page.py  webpage.py
shared/reflex_ui_shared/utils/: docpage.py
shared/reflex_ui_shared/views/: cta_card.py  footer.py  hosting_banner.py  marketing_navbar.py
shared/reflex_ui_shared/views/sidebar/: __init__.py
shared/styles/: styles.py
shared/templates/: gallery_app_page.py  marketing_page.py  webpage.py
shared/utils/: docpage.py
shared/views/: cta_card.py  footer.py  hosting_banner.py  marketing_navbar.py
shared/views/sidebar/: __init__.py
shared_components/: constants.py  logger.py  upgrade_pro_dialog.py
shared_components/booking_form/: booking_form.py  constants.py
shared_components/metrics/: posthog.py
shared_components/utils/: twmerge.py
(+22 files in other folders)
