[project]
name = "reflex-ui"
version = "0.0.1"
description = "A set of reusable components built on top of Base UI and Tailwind, designed for use across any Reflex project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["reflex (>=0.8.0)"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
metadata = false

[dependency-groups]
dev = ["pyright==1.1.403", "pre-commit"]

[tool.codespell]
skip = "*.pyi, uv.lock"

[tool.ruff]
target-version = "py313"
output-format = "concise"
lint.isort.split-on-trailing-comma = false
lint.select = ["ALL"]
lint.ignore = [
    "A",
    "ANN002",
    "ANN003",
    "ANN2",
    "ANN4",
    "ARG",
    "BLE",
    "C901",
    "COM",
    "D205",
    "DTZ",
    "E501",
    "F403",
    "FBT",
    "FIX",
    "G004",
    "ISC003",
    "PLC",
    "PLR",
    "PLW",
    "PT011",
    "PT012",
    "PYI",
    "RUF012",
    "S",
    "SLF",
    "SLOT",
    "TC",
    "TD",
    "TRY0",
    "UP038",
]
lint.pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["D301", "D415", "D417", "D418", "E742", "N", "PGH"]
"**/alembic/*.py" = ["D", "ERA"]
"__init__.py" = ["ERA"]

[tool.pyright]
reportIncompatibleMethodOverride = false
reportMissingImports = false
reportInconsistentOverload = false
exclude = ["**/alembic/*", "demo/*", "reflex_ui/**/*.pyi"]

[tool.uv]
required-version = ">=0.7.0"
